modified index.html in .

--- a/index.html
+++ b/index.html
@@ -380,7 +380,17 @@
         <div class="row g-4">
           <div class="col-md">
             <h2 class="text-center mb-4">Contact Info</h2>
-             
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> 50 Main st Boston MA
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Phone:</span> (333) 333-3333
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Email:</span> entroll@devbootcamp.com
+              </li>
+            </ul>
           </div>
         </div>
       </div>
